--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
-<!<!DOCTYPE>
-<html>
-    <head>Test Header</head>
-    <body>
-<h1>Hello Angular app Superb!!!
+<!DOCTYPE html>
+<html ng-app="MyAngularApp">
 
-</h1>
-        </body>
-    </html>
+<head>
+    <meta charset="utf-8">
+    <script src="angular.min.js"></script>
+    <script src="app.js"></script>
+</head>
+
+<body>
+    <div ng-controller="MyAngularController">
+        {{SayHello()}} {{name}}
+        <input type="text" ng-model="name" ng-blur="upper()">
+    </div>
+</body>
+<script>
+    var element = document.querySelector("[ng-app]");
+    console.log(element.getAttribute("ng-app"))
+    console.log(element);
+</script>
+
+</html>
